@@ -98,7 +98,8 @@ function setDefaultOptions() {
 
 var blockedRegexes = [
 /.+:\/\/.+\.tribdss\.com\//,
-/thenation\.com\/.+\/paywall-script\.php/
+/thenation\.com\/.+\/paywall-script\.php/,
+/haaretz\.co\.il\/htz\/js\/inter\.js/
 ];
 
 var enabledSites = [];
