@@ -1,4 +1,6 @@
 Updates--
+
+2018-10-07 v1.3.3: Fixed haaretz.co.il
 2018-10-02 v1.3.2: Added The Advocate(theadvocate.com.au), added Examiner (examiner.com.au)
 2018-09-16 v1.3.1: Removed Het Financieele Dagblad (fd.nl)
 2018-09-09 v1.3.0: Fixed chicagobusiness.com
